--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -30,6 +30,31 @@ hidesBottomBarWhenPushed的设置一定放在pushViewController之前
 
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
+CocoaPods 0.36-beta后增加了对iOS 8框架以及Swift语言所编写的库的支持。使用use_frameworks!,则cocoapods 使用了frameworks 来取代static libraries 方式。
+这样的话，我们不需要在Bridging文件引入头文件,只需要在Swift文件中import 相应的库,就像我们 import UIKit类似,这种方式支持iOS 8以上的系统.我们只需要支持iOS8以上的系统。
+
+
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
