添加第一个视图模型，视图模型就是提取“MVC”中的视图控制器里逻辑处理部分的模块。 M V VM

--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -99,6 +99,8 @@ App Key：1069040971
 App Secret：dced87f388fc65cf3eb6861e0614be24
 access token:2.002SUK3C_5a2KB590f93dd00DxZ3yD
 
+access_token目前OAuth1.0为永久有效；OAuth2.0对于未审核应用有效期为24小时，对于已审核应用有效期最低为7天，不同的应用级别有效期不同
+
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 类名.self获取的是实例类型，即OC中的isa(一个类用结构体类型描述自己)
 
@@ -117,7 +119,16 @@ AnyObject有什么用呢?
 表示任意类的元类型，任意类的类型都隐式遵守这个协议.
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//FIXME: 记录需要修改bug的相关说明
+//TODO:  记录待办事项的相关说明
+// MARK:- 对下面代码的相关说明,带分割线
+// MARK: 对下面代码的相关说明,不带分割线
 
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+set get这两个针对计算属性
+willSet didSet这两个针对存储属性
+
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 
