WB_高级函数，响应式编程中用的较多。

--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -129,6 +129,11 @@ set get这两个针对计算属性
 willSet didSet这两个针对存储属性
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
+数组的map:通过提供的闭包，闭包中对每一个数组元素进行处理，并返回处理结果；map的的最终结果是处理后的结果集；
+数组的filter:通过提供的闭包，闭包中对每一个数组元素进行判断处理，并返回true/false；map的的最终结果是过滤后的结果集；
+数组的reduce:通过提供的闭包，闭包中对每一个数组元素进行判断处理，并返回拼接结果；map的的最终结果是拼接的最后结果；
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 
 
