添加获取UID接口

--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -138,6 +138,19 @@ OC是通过KVC对属性赋值，通过动态派发调用函数
 Swift类型的成员或者方法在编译时就已经决定，而运行时便不再需要经过一次查找，而可以直接使用。
 添加@objc修饰符并不意味着这个方法或者属性会变成动态派发，Swift依然可能会将其优化为静态调用。如果你需要和Objective-C里动态调用时相同的运行时特性的话，你需要使用的修饰符是dynamic。一般情况下在做App开发时应该用不上，但是在施展一些像动态替换方法或者运行时再决定实现这样的 "黑魔法" 的时候，我们就需要用到dynamic修饰符了。
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
+HttpEngine.httpEngine.getUID { (value, error) in
+if error == nil {
+guard let dic = value else{
+return
+}
+
+print(dic)
+
+}else{
+
+}
+}
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 
