WB_添加小红点组件

--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -151,6 +151,10 @@ print(dic)
 }
 }
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
+selectedBtn?.badgeOffset = CGPoint(x: -btnWidth / 2 + 30 / 2, y: 8)
+selectedBtn?.showBadge(withValue: 6)
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 
 
