WB_1.0.0_注册登录授权成功的通知，切换视图内容 //在访问view的getter时，如果view==nil，会调用loadView-->viewDidLoad

--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -221,6 +221,9 @@ OOM(Out Of Memory)
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 听云：
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
+获取视同私有库
+https://github.com/nst/iOS-Runtime-Headers
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 
