--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -382,6 +382,9 @@ override func didMoveToWindow() {
     }
 }
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
+awakeFromNib, didMoveToWindow
+
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 
