WB_1.0.0_func tableView(_ tableView: UITableView, heightForRowAt indexPath: IndexPath) -> CGFloat 都知道，这个回调要求返回的是UITableViewCell的高度，但是内容是放在其contentView上的，contentView高度默认比UITableViewCell高度小0.63。我们动态计算的高度是内容区的高度，要额外加上这0.63，才是真正UITableViewCell的高度，否则contentView会自动少0.63，对于文本UILabel来说就会显示不全。

--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -408,8 +408,13 @@ override func didMoveToWindow() {
     }
 }
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
-awakeFromNib, didMoveToWindow
+awakeFromNib从文件加载视图就会调用，这个时候对类引用已生效，但是frame还是约束。
+didMoveToWindow：视图已加载到Window,frame还是约束
 
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+func tableView(_ tableView: UITableView, heightForRowAt indexPath: IndexPath) -> CGFloat
+都知道，这个回调要求返回的是UITableViewCell的高度，但是内容是放在其contentView上的，contentView高度默认比UITableViewCell高度小0.63。我们动态计算的高度是内容区的高度，
+要额外加上这0.63，才是真正UITableViewCell的高度，否则contentView会自动少0.63，对于文本UILabel来说就会显示不全。
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
