WB_1.0.0_折腾了不少时间，关于swift4.0后，class不在默认支持OC runtime特性，最简单在class前加@objcMembers，你的swift类就拥有runtime功能了

--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -242,6 +242,8 @@ expires_in = 111398;
 uid = "3201800892"
 }
 
+最简单在class前加@objcMembers，你的swift类就拥有runtime功能了
+
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 OOM(Out Of Memory)
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
