--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -418,8 +418,15 @@ func tableView(_ tableView: UITableView, heightForRowAt indexPath: IndexPath) ->
 都知道，这个回调要求返回的是UITableViewCell的高度，但是内容是放在其contentView上的，contentView高度默认比UITableViewCell高度小0.63。我们动态计算的高度是内容区的高度，
 要额外加上这0.63，才是真正UITableViewCell的高度，否则contentView会自动少0.63，对于文本UILabel来说就会显示不全。
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
+//为第三方库(YYModel)指定属性类型
+class func modelContainerPropertyGenericClass() ->[String:AnyClass] {
+    return ["pic_urls":WBThumbnailPic.self]
+}
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 
