WB_1.0.0_项目中的布局，必须用代码建立自动布局约束。

--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -423,7 +423,7 @@ class func modelContainerPropertyGenericClass() ->[String:AnyClass] {
     return ["pic_urls":WBThumbnailPic.self]
 }
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
+界面布局，为了维护布局约束，代码布局比xib中布局虽要写的多些，但是后期可维护性要高。想想看，xib中一个控件上超过4个以上的约束的感觉。
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
