--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -425,6 +425,26 @@ class func modelContainerPropertyGenericClass() ->[String:AnyClass] {
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 界面布局，为了维护布局约束，代码布局比xib中布局虽要写的多些，但是后期可维护性要高。想想看，xib中一个控件上超过4个以上的约束的感觉。
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
+派发组的简单演示：
+func test() {
+    //创建派发组
+    let dispatchGroup = DispatchGroup()
+    //创建并发队列
+    let dispatchQueue = DispatchQueue(label: "", attributes: .concurrent)
+    //将异步派发任务绑定到派发组
+    dispatchQueue.async(group: dispatchGroup) {
+        print("\(Thread.current)---AAAAAA")
+    }
+
+    dispatchQueue.async(group: dispatchGroup) {
+        print("\(Thread.current)---BBBBBB")
+    }
+
+    //派发组监听所有任务的完成
+    dispatchGroup.notify(queue: DispatchQueue.main) {
+    print("\(Thread.current)---something")
+    }
+}
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
