WB_1.0.0_添加新的刷新视图xib（其实就是在原xib的基础上添加了一个大背景图）

--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -784,13 +784,20 @@ let bundle = Bundle.init(path: bundlepath!)
 let img_path = bundle?.path(forResource: "compose_emotion_delete_highlighted@2x", ofType: "png")
 let image = UIImage.init(contentsOfFile: img_path!)
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
+XCODE sourceTree文件状态变化
+'A' 新增
+'D' 删除
+'M' 修改
+'R' 替代
+'C' 冲突
+'I' 忽略
+'?' 未受控
+'!' 丢失，一般是将受控文件直接删除导致
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 
-
-
-
-
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 
