WB_1.0.0_撰写按钮点击后，被点击项放大，未点击项缩小，渐变，回调完成。

--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -794,8 +794,10 @@ XCODE sourceTree文件状态变化
 '?' 未受控
 '!' 丢失，一般是将受控文件直接删除导致
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
-
-
+@escaping @noescape
+如果函数闭包参数是在这个函数结束前内被调用，就是非逃逸的即noescape；
+如果函数闭包参数是在函数执行完后才被调用，即，调用的地方超过了这函数的范围，叫逃逸闭包。
+默认是@noescape
 
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
