post文件初步封装

--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -804,6 +804,10 @@ XCODE sourceTree文件状态变化
 self.navigationItem.rightBarButtonItem = UIBarButtonItem(customView: rightButton)
 rightButton.isEnabled = false
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
+iOS Swift用Alamofire图片和其他参数一起上传
+https://www.jianshu.com/p/d519f743ce8d
+//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+
 
 
 
