表情按钮处理

--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -806,9 +806,14 @@ rightButton.isEnabled = false
 //////////////////////////////////////////////////////////////////////////////////////////////////////////////
 iOS Swift用Alamofire图片和其他参数一起上传
 https://www.jianshu.com/p/d519f743ce8d
-//////////////////////////////////////////////////////////////////////////////////////////////////////////////
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////
+去掉UITextView的pading和Margin的方法:
+textView.textContainer.lineFragmentPadding = 0.0
+textView.textContainerInset = UIEdgeInsets.zero
 
-
+内容永不调整（默认automatic你会发现bound被视图控制器调整了）
+textView.contentInsetAdjustmentBehavior = .never
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 
