WB_1.0.0_添加表情单元格中表情按钮的点击协议

--- a/WeiBo/ReadMe
+++ b/WeiBo/ReadMe
@@ -829,6 +829,9 @@ let emotion = String.init(c)
 print(emotion)
 }
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////
+问题是pod install完成后还是提示：解决Swift中出现 No such module 'YYModel'
+解决办法是在build phases中的link binary with libraries中先删除pods_xxx.framework，再重新添加一次就好了
+/////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
 
 
